--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,9 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=myShopMana
+application.vendor=Admin
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +35,16 @@ dist.jar=${dist.dir}/myShopMana.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/myShopMana
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.2.2.jar=C:\\Users\\Admin\\OneDrive\\M\u00e1y t\u00ednh\\jcalendar-1.2.2.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\Admin\\Downloads\\jar_files\\mysql-connector-java-8.0.29.jar
 file.reference.rs2xml.jar=C:\\Users\\Admin\\Downloads\\jar_files\\rs2xml.jar
 file.reference.rs2xml.zip=C:\\Users\\Admin\\Downloads\\jar_files\\rs2xml.zip
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
     ${libs.absolutelayout.classpath}:\
@@ -55,8 +61,8 @@ javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.eclipselinkmodelgen.classpath}
-javac.source=14
-javac.target=14
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -82,7 +88,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=myShopMana
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=myshopmana.MyShopMana
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
