--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,9 @@ excludes=
 file.reference.jcalendar-1.2.2.jar=C:\\Users\\Admin\\OneDrive\\M\u00e1y t\u00ednh\\jcalendar-1.2.2.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\Admin\\Downloads\\jar_files\\mysql-connector-java-8.0.29.jar
 file.reference.rs2xml.jar=C:\\Users\\Admin\\Downloads\\jar_files\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\Admin\\OneDrive\\M\u00e1y t\u00ednh\\rs2xml.jar
 file.reference.rs2xml.zip=C:\\Users\\Admin\\Downloads\\jar_files\\rs2xml.zip
+file.reference.rs2xml.zip-1=C:\\Users\\Admin\\OneDrive\\M\u00e1y t\u00ednh\\rs2xml.zip
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -51,7 +53,9 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.jcalendar-1.2.2.jar}:\
     ${file.reference.rs2xml.zip}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.rs2xml.zip-1}:\
+    ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,8 +65,8 @@ javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.eclipselinkmodelgen.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=14
+javac.target=14
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -126,4 +130,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
+src.resource.dir=src\\resource
 test.src.dir=test
